--- a/jenkins.properties
+++ b/jenkins.properties
@@ -11,4 +11,5 @@ IMAGE_BUILDER=openshift/nodejs:8
 APP_LABEL=node-backend-v2
 NAMESPACE=node-backend
 #Porta da aplicação
-PORT=8090
+PORT=8080
+HEALTHCHECK=/
