--- a/templates/templateAPI.yml
+++ b/templates/templateAPI.yml
@@ -1,51 +1,49 @@
 apiVersion: v1
 kind: Template
 labels:
-  template: "${NAME}"
+  template: "@APP_LABEL@"
 metadata:
-  name: "${NAME}"
+  name: "@PROJECT_NAME@"
 objects:
-
 - apiVersion: v1
   kind: Service
   metadata:
     labels:
-      app: "${LABEL}"
-    name: "${NAME}"
+      app: "@APP_LABEL@"
+    name: "@PROJECT_NAME@"
   spec:
     ports:
-    - name: web
+    - name: http
       port: 8080
       protocol: TCP
-      targetPort: 3000
+      targetPort: "@PORT@"
     selector:
-      app: "${NAME}"
-      deploymentconfig: "${NAME}"
-
+      app: "@PROJECT_NAME@"
+      deploymentconfig: "@PROJECT_NAME@"
 - apiVersion: route.openshift.io/v1
   kind: Route
   metadata:
     labels:
-      app: "${LABEL}"
-    name: "${NAME}"
+      app: "@APP_LABEL@"
+      router: "@ENVIRONMENT@"
+    name: "@PROJECT_NAME@"
   spec:
     port:
-      targetPort: web
+      targetPort: http
     tls:
       insecureEdgeTerminationPolicy: Redirect
       termination: edge
     to:
       kind: Service
-      name: "${NAME}"
-
+      name: "@PROJECT_NAME@"
 - apiVersion: apps.openshift.io/v1
   kind: DeploymentConfig
   metadata:
     labels:
-      app: "${LABEL}"
-    name: "${NAME}"
-    annotations:  
-      template.alpha.openshift.io/wait-for-ready: 'true'
+      app: "@APP_LABEL@"
+    name: "@PROJECT_NAME@"
+    annotations:
+      template.alpha.openshift.io/wait-for-ready: "true"
   spec:
     strategy:
       type: "Rolling"
@@ -54,61 +52,58 @@ objects:
       imageChangeParams:
         automatic: false
         containerNames:
-        - "${NAME}"
+        - "@PROJECT_NAME@"
         from: 
           kind: ImageStreamTag
-          name: "${NAME}:latest"
-          namespace: "node-backend-qa"
+          name: "@BUILD_CONFIG_NAME_VERSION@:latest"
+          namespace: "@PROJECT_IMAGES@"
     - type: ConfigChange
     replicas: 1
     selector:
-      app: "${NAME}"
-      deploymentconfig: "${NAME}"
+      app: "@PROJECT_NAME@"
+      deploymentconfig: "@PROJECT_NAME@"
     template:
       metadata:
         labels:
-          app: "${LABEL}"
-          deploymentconfig: "${NAME}"
+          app: "@APP_LABEL@"
+          deploymentconfig: "@PROJECT_NAME@"
       spec:
         containers:
         - image: " "
-          name: "${NAME}"
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: "@SPRING_PROFILES_ACTIVE@"
+          # envFrom:
+            # - secretRef:
+                # name: "${SECRET_ENV}"
+          name: "@PROJECT_NAME@"
           resources:
             limits:
               cpu: '2'
               memory: 2Gi
             requests:
-              cpu: 250m
+              cpu: 500m
               memory: 1Gi
           ports:
-            - containerPort: 3000
+            - containerPort: "@PORT@"
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
-              port: 3000
+              path: "@HEALTHCHECK@"
+              port: "@PORT@"
               scheme: HTTP
-            initialDelaySeconds: 10
-            timeoutSeconds: 2
+            initialDelaySeconds: 360
+            timeoutSeconds: 180
             periodSeconds: 10
             successThreshold: 1
             failureThreshold: 3
           readinessProbe:
             httpGet:
-              path: /
-              port: 3000
+              path: "@HEALTHCHECK@"
+              port: "@PORT@"
               scheme: HTTP
             initialDelaySeconds: 30
-            timeoutSeconds: 2
+            timeoutSeconds: 180
             periodSeconds: 10
             successThreshold: 1
             failureThreshold: 3
-parameters:
-- name: NAME
-  displayName: Name
-  description: The name assigned to all of the frontend objects defined in this template.
-  required: true
-- name: LABEL
-  displayName: App label
-  required: true
-  #value: marketing-management-v1
