--- a/jenkins.properties
+++ b/jenkins.properties
@@ -2,14 +2,20 @@
 IMAGE_BUILDER=openshift/nodejs:8
 #Nome do projeto onde ficarão as imagens geradas
 PROJECT_IMAGES=node-backend-qa
-#Nome do projeto deve ser referente (igual) ao do Openshift
-PROJECT_NAME=node-backend-v2
-#Nome do build configuração que será usado para subir a aplicação. Normalmente escolher o mesmo que PROJECT_NAME
-BUILD_CONFIG_NAME_VERSION=node-backend-v2
-BUILD_CONFIG_NAME=minhaoi-estrutura-backend
-#Label da aplicação para ser exibido no painel do Openshift
-APP_LABEL=node-backend-v2
+# Nome do projeto sem especificar versão
 NAMESPACE=node-backend
+
+# Versao
+VERSAO=v2
+
+#Nome do projeto deve ser referente (igual) ao do Openshift
+#PROJECT_NAME=node-backend-v2
+#Nome do build configuração que será usado para subir a aplicação. Normalmente escolher o mesmo que PROJECT_NAME
+#BUILD_CONFIG_NAME_VERSION=node-backend-v2
+#Label da aplicação para ser exibido no painel do Openshift
+#APP_LABEL=node-backend-v2
+
 #Porta da aplicação
 PORT=3000
+#URL do health check
 HEALTHCHECK=/
