--- a/jenkins.properties
+++ b/jenkins.properties
@@ -14,3 +14,5 @@ APP_LABEL=node-backend-v2
 PORT=3000
 #URL do health check
 HEALTHCHECK=/
+#Arquivos de environments separados por vírgula
+ENV_FILES=environments.env, common.env
