--- a/jenkins.properties
+++ b/jenkins.properties
@@ -15,5 +15,5 @@ PORT=3000
 #URL do health check
 HEALTHCHECK=/
 #Arquivos de environments separados por vírgula
-ENV_FILES=environments.env, common.env, zuul.env
-#ENV_FILES= 
+#ENV_FILES=environments.env, common.env, zuul.env
+ENV_FILES= 
